Update contact info, experience details, and footer layout
Updated LinkedIn username and replaced placeholder images with project-specific assets. Changed section title to "Study Experience" and improved the visuals for PDP Academy, ITPU, and PROMAX LLC. Simplified the footer by removing redundant elements and streamlining its layout.

--- a/home/contact.html
+++ b/home/contact.html
@@ -92,7 +92,7 @@
                     </div>
                     <div class="contact-text">
                         <h3>LinkedIn</h3>
-                        <p>suhrob-qalandarov-4a20b5293</p>
+                        <p>suhrob-qalandarov</p>
                     </div>
                 </div>
             </div>
