--- a/home/experience.html
+++ b/home/experience.html
@@ -54,7 +54,7 @@
     <div class="section-bg-dots"></div>
     <div class="container">
         <div class="section-title" data-aos="fade-up">
-            <h2>Work Experience</h2>
+            <h2>Study Experience</h2>
         </div>
         <div class="experience-timeline">
             <!-- PDP ACADEMY Card (Present) -->
@@ -62,7 +62,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="https://via.placeholder.com/80x80" alt="PDP ACADEMY Logo">
+                            <img src="/assets/img/pdpa-logo.jpeg" alt="PDP ACADEMY Logo">
                         </div>
                         <h3 class="experience-title green-title">PDP ACADEMY</h3>
                     </div>
@@ -73,7 +73,7 @@
                     </p>
                 </div>
                 <div class="experience-image">
-                    <img src="https://via.placeholder.com/500x400" alt="Tashkent City">
+                    <img src="/assets/img/pdpa-building.jpeg" alt="Tashkent City">
                 </div>
             </div>
 
@@ -82,7 +82,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="https://via.placeholder.com/80x80" alt="ITPU Logo">
+                            <img src="/assets/img/itpu-logo.png" alt="ITPU Logo">
                         </div>
                         <h3 class="experience-title blue-title">ITPU</h3>
                     </div>
@@ -93,7 +93,7 @@
                     </p>
                 </div>
                 <div class="experience-image">
-                    <img src="https://via.placeholder.com/500x400" alt="Samarkand City">
+                    <img src="/assets/img/itpu-building.jpeg" alt="Samarkand City">
                 </div>
             </div>
 
@@ -102,7 +102,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="https://via.placeholder.com/80x80" alt="PROMAX LLC Logo">
+                            <img src="/assets/img/promax-logo.jpg" alt="PROMAX LLC Logo">
                         </div>
                         <h3 class="experience-title dark-blue-title">PROMAX LLC</h3>
                     </div>
@@ -113,7 +113,7 @@
                     </p>
                 </div>
                 <div class="experience-image">
-                    <img src="https://via.placeholder.com/500x400" alt="Bukhara City">
+                    <img src="/assets/img/promax-building.jpg" alt="Bukhara City">
                 </div>
             </div>
         </div>
