Remove unused assets and restructure file organization
Unused image assets and CSS files have been removed to optimize storage and improve maintainability. Relevant experience-related images were moved to a more logical path, and new project assets were added for updated content.

--- a/home/experience.html
+++ b/home/experience.html
@@ -62,7 +62,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="/assets/img/pdpa-logo.jpeg" alt="PDP ACADEMY Logo">
+                            <img src="/assets/img/experience/study/pdpa-logo.jpeg" alt="PDP ACADEMY Logo">
                         </div>
                         <h3 class="experience-title green-title">PDP ACADEMY</h3>
                     </div>
@@ -73,7 +73,7 @@
                     </p>
                 </div>
                 <div class="experience-image">
-                    <img src="/assets/img/pdpa-building.jpeg" alt="Tashkent City">
+                    <img src="/assets/img/experience/study/pdpa-building.jpeg" alt="Tashkent City">
                 </div>
             </div>
 
@@ -82,7 +82,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="/assets/img/itpu-logo.png" alt="ITPU Logo">
+                            <img src="/assets/img/experience/study/itpu-logo.png" alt="ITPU Logo">
                         </div>
                         <h3 class="experience-title blue-title">ITPU</h3>
                     </div>
@@ -93,7 +93,7 @@
                     </p>
                 </div>
                 <div class="experience-image">
-                    <img src="/assets/img/itpu-building.jpeg" alt="Samarkand City">
+                    <img src="/assets/img/experience/study/itpu-building.jpeg" alt="Samarkand City">
                 </div>
             </div>
 
@@ -102,7 +102,7 @@
                 <div class="experience-content">
                     <div class="experience-header">
                         <div class="experience-logo">
-                            <img src="/assets/img/promax-logo.jpg" alt="PROMAX LLC Logo">
+                            <img src="/assets/img/experience/study/promax-logo.jpg" alt="PROMAX LLC Logo">
                         </div>
                         <h3 class="experience-title dark-blue-title">PROMAX LLC</h3>
                     </div>
@@ -113,7 +113,7 @@
                     </p>
                 </div>
                 <div class="experience-image">
-                    <img src="/assets/img/promax-building.jpg" alt="Bukhara City">
+                    <img src="/assets/img/experience/study/promax-building.jpg" alt="Bukhara City">
                 </div>
             </div>
         </div>
