--- a/home/projects.html
+++ b/home/projects.html
@@ -59,55 +59,86 @@
         <div class="projects-container">
             <div class="project-item" data-aos="fade-up" data-aos-delay="200">
                 <div class="project-image">
-                    <img src="https://via.placeholder.com/400x220" alt="Globus Project">
-                    <a href="#" class="project-link">Check Live</a>
+                    <img src="/assets/img/projects/ecommerce.png" alt="Ecommerce Project img">
+                    <a href="#" class="project-link">Ecommerce Project</a>
                 </div>
                 <div class="project-content">
-                    <h3 class="project-title">Globus</h3>
+                    <h3 class="project-title">Ecommerce</h3>
                     <p class="project-description">
-                        Globus is an interactive 3D globe visualization built using Three.js and three-globe. This project allows users to explore and display dynamic paths.
+                        Online ecommerce
                     </p>
                     <div class="project-tags">
+                        <span class="project-tag">JavaSpringBoot</span>
+                        <span class="project-tag">Filter</span>
+                        <span class="project-tag">JPA Hibernate</span>
+                        <span class="project-tag">PostgreSQL</span>
+                        <span class="project-tag">HTML</span>
+                        <span class="project-tag">CSS/Boostrap</span>
                         <span class="project-tag">JavaScript</span>
-                        <span class="project-tag">Three.js</span>
-                        <span class="project-tag">three-globe</span>
                     </div>
                 </div>
+                <a href="https://github.com/suhrob-kalandarov/shopnow" class="social-icon" aria-label="GitHub">
+                    <div class="icon-inner">
+                        <i class="fab fa-github"></i>
+                    </div>
+                </a>
             </div>
             <div class="project-item" data-aos="fade-up" data-aos-delay="400">
                 <div class="project-image">
-                    <img src="https://via.placeholder.com/400x220" alt="Daily Task App">
+                    <img src="/assets/img/projects/task-flow.png" alt="Daily Task App img">
                     <a href="#" class="project-link">Check Live</a>
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Daily Task</h3>
                     <p class="project-description">
+                        MVC project with Java backend
                         A task management app that helps users organize their daily tasks efficiently. Users can sign up, create, update, and delete tasks, with all data securely stored.
                     </p>
                     <div class="project-tags">
-                        <span class="project-tag">React</span>
-                        <span class="project-tag">TypeScript</span>
-                        <span class="project-tag">Node.js</span>
-                        <span class="project-tag">MongoDB</span>
+                        <span class="project-tag">JavaSpringBoot</span>
+                        <span class="project-tag">Spring Security</span>
+                        <span class="project-tag">Gmail</span>
+                        <span class="project-tag">JPA Hibernate</span>
+                        <span class="project-tag">PostgreSQL</span>
+                        <span class="project-tag">HTML</span>
+                        <span class="project-tag">CSS/Boostrap</span>
+                        <span class="project-tag">JavaScript</span>
                     </div>
                 </div>
+                <a href="https://github.com/suhrob-kalandarov/trelllo" class="social-icon" aria-label="GitHub">
+                    <div class="icon-inner">
+                        <i class="fab fa-github"></i>
+                    </div>
+                </a>
             </div>
             <div class="project-item" data-aos="fade-up" data-aos-delay="600">
                 <div class="project-image">
-                    <img src="https://via.placeholder.com/400x220" alt="Portfolio Creator">
+                    <img src="/assets/img/projects/xo-game-tg-bot.png" alt="TicTacToe X0 game img">
                     <a href="#" class="project-link">Check Live</a>
                 </div>
                 <div class="project-content">
-                    <h3 class="project-title">Portfolio Creator</h3>
+                    <h3 class="project-title">TicTacToe X0 game</h3>
                     <p class="project-description">
-                        A web application that allows users to create professional portfolios with customizable templates, animations, and responsive designs without coding knowledge.
+                        Java backend
                     </p>
                     <div class="project-tags">
-                        <span class="project-tag">Vue.js</span>
-                        <span class="project-tag">Firebase</span>
-                        <span class="project-tag">GSAP</span>
+                        <span class="project-tag">JavaSpringBoot</span>
+                        <span class="project-tag">JPA Hibernate</span>
+                        <span class="project-tag">Best Architecture</span>
+                        <span class="project-tag">PostgreSQL</span>
+                        <span class="project-tag">Telegram</span>
                     </div>
                 </div>
+                <a href="https://github.com/suhrob-kalandarov" class="social-icon" aria-label="GitHub">
+                    <div class="icon-inner">
+                        <i class="fab fa-github"></i>
+                    </div>
+                </a>
+                <a href="https://t.me/Game_OXXO_bot" class="social-icon" aria-label="Telegram">
+                    <div class="icon-inner">
+                        <i class="fab fa-telegram-plane"></i>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
