--- a/home/projects.html
+++ b/home/projects.html
@@ -60,12 +60,11 @@
             <div class="project-item" data-aos="fade-up" data-aos-delay="200">
                 <div class="project-image">
                     <img src="/assets/img/projects/ecommerce.png" alt="Ecommerce Project img">
-                    <a href="#" class="project-link">Ecommerce Project</a>
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Ecommerce</h3>
                     <p class="project-description">
-                        Online ecommerce
+                        Online ecommerce platform with product filtering, user authentication, and secure payment processing. Built with Java Spring Boot and modern frontend technologies.
                     </p>
                     <div class="project-tags">
                         <span class="project-tag">JavaSpringBoot</span>
@@ -86,13 +85,11 @@
             <div class="project-item" data-aos="fade-up" data-aos-delay="400">
                 <div class="project-image">
                     <img src="/assets/img/projects/task-flow.png" alt="Daily Task App img">
-                    <a href="#" class="project-link">Check Live</a>
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">Daily Task</h3>
                     <p class="project-description">
-                        MVC project with Java backend
-                        A task management app that helps users organize their daily tasks efficiently. Users can sign up, create, update, and delete tasks, with all data securely stored.
+                        MVC project with Java backend that helps users organize their daily tasks efficiently. Features include user authentication with Spring Security, email notifications via Gmail, and secure data storage with PostgreSQL.
                     </p>
                     <div class="project-tags">
                         <span class="project-tag">JavaSpringBoot</span>
@@ -119,7 +116,7 @@
                 <div class="project-content">
                     <h3 class="project-title">TicTacToe X0 game</h3>
                     <p class="project-description">
-                        Java backend
+                        Java backend Telegram bot implementation of the classic TicTacToe game. Features a well-architected codebase with persistent game states stored in PostgreSQL and an intuitive Telegram interface.
                     </p>
                     <div class="project-tags">
                         <span class="project-tag">JavaSpringBoot</span>
