Update links and images for projects and profiles
Replaced placeholder links and images with actual URLs and assets for better functionality and presentation. Added specific links to GitHub, LeetCode, and Chess.com profiles, and updated the "Check Live" link for the TicTacToe bot project. Included corresponding profile images in the assets folder.

--- a/home/profiles.html
+++ b/home/profiles.html
@@ -62,7 +62,7 @@
         <div class="profiles-container">
             <div class="profile-card" data-aos="fade-up" data-aos-delay="300">
                 <div class="profile-image">
-                    <img src="https://via.placeholder.com/400x200" alt="GitHub Profile">
+                    <img src="/assets/img/profile/github-profile.png" alt="GitHub Profile">
                 </div>
                 <div class="profile-content">
                     <h3 class="profile-title">GitHub</h3>
@@ -76,28 +76,28 @@
             </div>
             <div class="profile-card" data-aos="fade-up" data-aos-delay="400">
                 <div class="profile-image">
-                    <img src="https://via.placeholder.com/400x200" alt="LeetCode Profile">
+                    <img src="/assets/img/profile/leetcode-profile.png" alt="LeetCode Profile">
                 </div>
                 <div class="profile-content">
                     <h3 class="profile-title">LeetCode</h3>
                     <p class="profile-description">
                         Check out my problem-solving skills and algorithmic solutions on LeetCode, where I regularly practice and improve my coding abilities.
                     </p>
-                    <a href="#" target="_blank" class="profile-link">
+                    <a href="https://leetcode.com/u/suhrob_kalandarov" target="_blank" class="profile-link">
                         <i class="fas fa-code"></i> Visit LeetCode
                     </a>
                 </div>
             </div>
             <div class="profile-card" data-aos="fade-up" data-aos-delay="500">
                 <div class="profile-image">
-                    <img src="https://via.placeholder.com/400x200" alt="Chess.com Profile">
+                    <img src="/assets/img/profile/chess-profile.png" alt="Chess.com Profile">
                 </div>
                 <div class="profile-content">
                     <h3 class="profile-title">Chess.com</h3>
                     <p class="profile-description">
                         Beyond coding, I enjoy strategic thinking through chess. Visit my Chess.com profile to see my games and rating progress.
                     </p>
-                    <a href="#" target="_blank" class="profile-link">
+                    <a href="https://www.chess.com/member/azersayd" target="_blank" class="profile-link">
                         <i class="fas fa-chess"></i> Visit Chess.com
                     </a>
                 </div>
