--- a/home/projects.html
+++ b/home/projects.html
@@ -111,7 +111,7 @@
             <div class="project-item" data-aos="fade-up" data-aos-delay="600">
                 <div class="project-image">
                     <img src="/assets/img/projects/xo-game-tg-bot.png" alt="TicTacToe X0 game img">
-                    <a href="#" class="project-link">Check Live</a>
+                    <a href="https://t.me/Game_OXXO_bot" class="project-link">Check Live</a>
                 </div>
                 <div class="project-content">
                     <h3 class="project-title">TicTacToe X0 game</h3>
