--- a/home/skills.html
+++ b/home/skills.html
@@ -67,29 +67,23 @@
                         </div>
                         <div class="skill-name">JavaScript</div>
                     </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
-                        <div class="skill-icon">
-                            <i class="fab fa-react"></i>
-                        </div>
-                        <div class="skill-name">React</div>
-                    </div>
                     <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
                         <div class="skill-icon">
                             <i class="fab fa-html5"></i>
                         </div>
-                        <div class="skill-name">HTML5/CSS3</div>
+                        <div class="skill-name">HTML5</div>
                     </div>
                     <div class="skill-item" data-aos="zoom-in" data-aos-delay="600">
                         <div class="skill-icon">
-                            <i class="fas fa-code"></i>
+                            <i class="fab fa-css3-alt"></i>
                         </div>
-                        <div class="skill-name">TypeScript</div>
+                        <div class="skill-name">CSS3</div>
                     </div>
                     <div class="skill-item" data-aos="zoom-in" data-aos-delay="700">
                         <div class="skill-icon">
-                            <i class="fab fa-css3-alt"></i>
+                            <i class="fab fa-bootstrap"></i>
                         </div>
-                        <div class="skill-name">Tailwind</div>
+                        <div class="skill-name">Bootstrap</div>
                     </div>
                 </div>
             </div>
@@ -101,18 +95,6 @@
                             <i class="fab fa-java"></i>
                         </div>
                         <div class="skill-name">Java</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
-                        <div class="skill-icon">
-                            <i class="fab fa-python"></i>
-                        </div>
-                        <div class="skill-name">Python</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
-                        <div class="skill-icon">
-                            <i class="fab fa-node-js"></i>
-                        </div>
-                        <div class="skill-name">Node.js</div>
                     </div>
                     <div class="skill-item" data-aos="zoom-in" data-aos-delay="600">
                         <div class="skill-icon">
@@ -126,26 +108,20 @@
                         </div>
                         <div class="skill-name">Hibernate</div>
                     </div>
-                </div>
-            </div>
-            <div class="skill-category" data-aos="fade-up" data-aos-delay="600">
-                <h3>Others</h3>
-                <div class="skill-grid">
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="skill-icon">
-                            <i class="fas fa-database"></i>
-                        </div>
-                        <div class="skill-name">SQL</div>
-                    </div>
                     <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
                         <div class="skill-icon">
                             <i class="fas fa-server"></i>
                         </div>
                         <div class="skill-name">PostgreSQL</div>
                     </div>
+                </div>
+            </div>
+            <div class="skill-category" data-aos="fade-up" data-aos-delay="600">
+                <h3>Others</h3>
+                <div class="skill-grid">
                     <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
                         <div class="skill-icon">
-                            <i class="fas fa-leaf"></i>
+                            <i class="fas fa-database"></i>
                         </div>
                         <div class="skill-name">MongoDB</div>
                     </div>
@@ -166,6 +142,30 @@
                             <i class="fab fa-docker"></i>
                         </div>
                         <div class="skill-name">Docker</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="skill-category" data-aos="fade-up" data-aos-delay="600">
+                <h3>Extra Programming Languages</h3>
+                <div class="skill-grid">
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
+                        <div class="skill-icon">
+                            <i class="fas fa-code"></i>
+                        </div>
+                        <div class="skill-name">C++</div>
+                    </div>
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
+                        <div class="skill-icon">
+                            <i class="fab fa-python"></i>
+                        </div>
+                        <div class="skill-name">Python</div>
+                    </div>
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
+                        <div class="skill-icon">
+                            <i class="fab fa-swift"></i>
+                        </div>
+                        <div class="skill-name">Swift</div>
                     </div>
                 </div>
             </div>
