--- a/home/skills.html
+++ b/home/skills.html
@@ -119,37 +119,67 @@
             <div class="skill-category" data-aos="fade-up" data-aos-delay="600">
                 <h3>Others</h3>
                 <div class="skill-grid">
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
                         <div class="skill-icon">
                             <i class="fas fa-database"></i>
                         </div>
                         <div class="skill-name">MongoDB</div>
                     </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="600">
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
                         <div class="skill-icon">
                             <i class="fab fa-git-alt"></i>
                         </div>
                         <div class="skill-name">Git</div>
                     </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="700">
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
                         <div class="skill-icon">
                             <i class="fab fa-github"></i>
                         </div>
                         <div class="skill-name">GitHub</div>
                     </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="800">
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="600">
                         <div class="skill-icon">
                             <i class="fab fa-docker"></i>
                         </div>
                         <div class="skill-name">Docker</div>
                     </div>
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="700">
+                        <div class="skill-icon">
+                            <i class="fas fa-cubes"></i>
+                        </div>
+                        <div class="skill-name">Kubernetes</div>
+                    </div>
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="800">
+                        <div class="skill-icon">
+                            <i class="fas fa-layer-group"></i>
+                        </div>
+                        <div class="skill-name">Docker Compose</div>
+                    </div>
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="900">
+                        <div class="skill-icon">
+                            <i class="fas fa-sitemap"></i>
+                        </div>
+                        <div class="skill-name">MVC</div>
+                    </div>
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="1000">
+                        <div class="skill-icon">
+                            <i class="fas fa-file-code"></i>
+                        </div>
+                        <div class="skill-name">JSP</div>
+                    </div>
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="1100">
+                        <div class="skill-icon">
+                            <i class="fas fa-leaf"></i>
+                        </div>
+                        <div class="skill-name">Thymeleaf</div>
+                    </div>
                 </div>
             </div>
 
-            <div class="skill-category" data-aos="fade-up" data-aos-delay="600">
+            <div class="skill-category extra-languages" data-aos="fade-up" data-aos-delay="800">
                 <h3>Extra Programming Languages</h3>
-                <div class="skill-grid">
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
+                <div class="skill-grid languages-grid">
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
                         <div class="skill-icon">
                             <i class="fas fa-code"></i>
                         </div>
@@ -161,7 +191,7 @@
                         </div>
                         <div class="skill-name">Python</div>
                     </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
+                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
                         <div class="skill-icon">
                             <i class="fab fa-swift"></i>
                         </div>
