Refactor skills page with new layout and better organization
Rearranged skills into a two-column layout for improved readability and added a new "Extra Programming Languages" section. Updated CSS styles for consistency, responsiveness, and visual enhancements across devices.

--- a/home/skills.html
+++ b/home/skills.html
@@ -58,144 +58,152 @@
             <h2>Skills</h2>
         </div>
         <div class="skills-container">
-            <div class="skill-category" data-aos="fade-up" data-aos-delay="200">
-                <h3>Frontend</h3>
-                <div class="skill-grid">
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="skill-icon">
-                            <i class="fab fa-js"></i>
+            <div class="skills-layout">
+                <div class="left-column">
+                    <div class="skill-category main-skill" data-aos="fade-up" data-aos-delay="200">
+                        <h3>Backend</h3>
+                        <div class="skill-grid">
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
+                                <div class="skill-icon">
+                                    <i class="fab fa-java"></i>
+                                </div>
+                                <div class="skill-name">Java</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="600">
+                                <div class="skill-icon">
+                                    <i class="fas fa-leaf"></i>
+                                </div>
+                                <div class="skill-name">Spring Boot</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="700">
+                                <div class="skill-icon">
+                                    <i class="fas fa-database"></i>
+                                </div>
+                                <div class="skill-name">Hibernate</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
+                                <div class="skill-icon">
+                                    <i class="fas fa-server"></i>
+                                </div>
+                                <div class="skill-name">PostgreSQL</div>
+                            </div>
                         </div>
-                        <div class="skill-name">JavaScript</div>
                     </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
-                        <div class="skill-icon">
-                            <i class="fab fa-html5"></i>
-                        </div>
-                        <div class="skill-name">HTML5</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="600">
-                        <div class="skill-icon">
-                            <i class="fab fa-css3-alt"></i>
-                        </div>
-                        <div class="skill-name">CSS3</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="700">
-                        <div class="skill-icon">
-                            <i class="fab fa-bootstrap"></i>
-                        </div>
-                        <div class="skill-name">Bootstrap</div>
-                    </div>
-                </div>
-            </div>
-            <div class="skill-category" data-aos="fade-up" data-aos-delay="400">
-                <h3>Backend</h3>
-                <div class="skill-grid">
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="skill-icon">
-                            <i class="fab fa-java"></i>
-                        </div>
-                        <div class="skill-name">Java</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="600">
-                        <div class="skill-icon">
-                            <i class="fas fa-leaf"></i>
-                        </div>
-                        <div class="skill-name">Spring Boot</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="700">
-                        <div class="skill-icon">
-                            <i class="fas fa-database"></i>
-                        </div>
-                        <div class="skill-name">Hibernate</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
-                        <div class="skill-icon">
-                            <i class="fas fa-server"></i>
-                        </div>
-                        <div class="skill-name">PostgreSQL</div>
-                    </div>
-                </div>
-            </div>
-            <div class="skill-category" data-aos="fade-up" data-aos-delay="600">
-                <h3>Others</h3>
-                <div class="skill-grid">
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="skill-icon">
-                            <i class="fas fa-database"></i>
-                        </div>
-                        <div class="skill-name">MongoDB</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
-                        <div class="skill-icon">
-                            <i class="fab fa-git-alt"></i>
-                        </div>
-                        <div class="skill-name">Git</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
-                        <div class="skill-icon">
-                            <i class="fab fa-github"></i>
-                        </div>
-                        <div class="skill-name">GitHub</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="600">
-                        <div class="skill-icon">
-                            <i class="fab fa-docker"></i>
-                        </div>
-                        <div class="skill-name">Docker</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="700">
-                        <div class="skill-icon">
-                            <i class="fas fa-cubes"></i>
-                        </div>
-                        <div class="skill-name">Kubernetes</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="800">
-                        <div class="skill-icon">
-                            <i class="fas fa-layer-group"></i>
-                        </div>
-                        <div class="skill-name">Docker Compose</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="900">
-                        <div class="skill-icon">
-                            <i class="fas fa-sitemap"></i>
-                        </div>
-                        <div class="skill-name">MVC</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="1000">
-                        <div class="skill-icon">
-                            <i class="fas fa-file-code"></i>
-                        </div>
-                        <div class="skill-name">JSP</div>
-                    </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="1100">
-                        <div class="skill-icon">
-                            <i class="fas fa-leaf"></i>
-                        </div>
-                        <div class="skill-name">Thymeleaf</div>
-                    </div>
-                </div>
-            </div>
 
-            <div class="skill-category extra-languages" data-aos="fade-up" data-aos-delay="800">
-                <h3>Extra Programming Languages</h3>
-                <div class="skill-grid languages-grid">
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
-                        <div class="skill-icon">
-                            <i class="fas fa-code"></i>
+                    <div class="skill-category main-skill" data-aos="fade-up" data-aos-delay="400">
+                        <h3>Frontend</h3>
+                        <div class="skill-grid">
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
+                                <div class="skill-icon">
+                                    <i class="fab fa-js"></i>
+                                </div>
+                                <div class="skill-name">JavaScript</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
+                                <div class="skill-icon">
+                                    <i class="fab fa-html5"></i>
+                                </div>
+                                <div class="skill-name">HTML5</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="600">
+                                <div class="skill-icon">
+                                    <i class="fab fa-css3-alt"></i>
+                                </div>
+                                <div class="skill-name">CSS3</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="700">
+                                <div class="skill-icon">
+                                    <i class="fab fa-bootstrap"></i>
+                                </div>
+                                <div class="skill-name">Bootstrap</div>
+                            </div>
                         </div>
-                        <div class="skill-name">C++</div>
                     </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
-                        <div class="skill-icon">
-                            <i class="fab fa-python"></i>
+
+                    <div class="skill-category extra-languages" data-aos="fade-up" data-aos-delay="800">
+                        <h3>Extra Programming Languages</h3>
+                        <div class="skill-grid languages-grid">
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
+                                <div class="skill-icon">
+                                    <i class="fas fa-code"></i>
+                                </div>
+                                <div class="skill-name">C++</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
+                                <div class="skill-icon">
+                                    <i class="fab fa-python"></i>
+                                </div>
+                                <div class="skill-name">Python</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
+                                <div class="skill-icon">
+                                    <i class="fab fa-swift"></i>
+                                </div>
+                                <div class="skill-name">Swift</div>
+                            </div>
                         </div>
-                        <div class="skill-name">Python</div>
                     </div>
-                    <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
-                        <div class="skill-icon">
-                            <i class="fab fa-swift"></i>
+                </div>
+
+                <div class="right-column">
+                    <div class="skill-category others-skill" data-aos="fade-up" data-aos-delay="600">
+                        <h3>Others</h3>
+                        <div class="skill-grid">
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
+                                <div class="skill-icon">
+                                    <i class="fas fa-database"></i>
+                                </div>
+                                <div class="skill-name">MongoDB</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="400">
+                                <div class="skill-icon">
+                                    <i class="fab fa-git-alt"></i>
+                                </div>
+                                <div class="skill-name">Git</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="500">
+                                <div class="skill-icon">
+                                    <i class="fab fa-github"></i>
+                                </div>
+                                <div class="skill-name">GitHub</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="600">
+                                <div class="skill-icon">
+                                    <i class="fab fa-docker"></i>
+                                </div>
+                                <div class="skill-name">Docker</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="700">
+                                <div class="skill-icon">
+                                    <i class="fas fa-cubes"></i>
+                                </div>
+                                <div class="skill-name">Kubernetes</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="800">
+                                <div class="skill-icon">
+                                    <i class="fas fa-layer-group"></i>
+                                </div>
+                                <div class="skill-name">Docker Compose</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="900">
+                                <div class="skill-icon">
+                                    <i class="fas fa-sitemap"></i>
+                                </div>
+                                <div class="skill-name">MVC</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="1000">
+                                <div class="skill-icon">
+                                    <i class="fas fa-file-code"></i>
+                                </div>
+                                <div class="skill-name">JSP</div>
+                            </div>
+                            <div class="skill-item" data-aos="zoom-in" data-aos-delay="1100">
+                                <div class="skill-icon">
+                                    <i class="fas fa-leaf"></i>
+                                </div>
+                                <div class="skill-name">Thymeleaf</div>
+                            </div>
                         </div>
-                        <div class="skill-name">Swift</div>
                     </div>
                 </div>
             </div>
