Update skills section to rename and simplify category title
Renamed "Extra Programming Languages" to "Programming Languages" for clarity and consistency. This improves readability and removes unnecessary categorization, enhancing the user experience.

--- a/home/skills.html
+++ b/home/skills.html
@@ -117,8 +117,8 @@
                 </div>
             </div>
 
-            <div class="skill-category extra-languages" data-aos="fade-up" data-aos-delay="800">
-                <h3>Extra Programming Languages</h3>
+            <div class="skill-category" data-aos="fade-up" data-aos-delay="800">
+                <h3>Extra Languages</h3>
                 <div class="skill-grid languages-grid">
                     <div class="skill-item" data-aos="zoom-in" data-aos-delay="300">
                         <div class="skill-icon">
