--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </div>
 </section>
 
-<!-- About Section -->
+<!-- About Section
 <section id="about" class="about">
   <div class="section-bg-dots"></div>
   <div class="container">
@@ -88,7 +88,7 @@
   </div>
 </section>
 
-<!-- Skills Section -->
+&lt;!&ndash; Skills Section &ndash;&gt;
 <section id="skills" class="skills">
   <div class="section-bg-dots"></div>
   <div class="container">
@@ -211,7 +211,7 @@
   </div>
 </section>
 
-<!-- Projects Section -->
+&lt;!&ndash; Projects Section &ndash;&gt;
 <section id="projects" class="projects">
   <div class="section-bg-dots"></div>
   <div class="container">
@@ -273,7 +273,7 @@
       </div>
     </div>
   </div>
-</section>
+</section>-->
 
 <!-- Include Footer -->
 <div id="footer-container"></div>
